examples/compiler_errors/wrong_argument_count.flx
fn add(a: Int, b: Int) -> Int {
    a + b
}

fn main() -> Unit {
    let ignored = add(1)
}
